--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ blinker==1.4
 cffi==1.14.0
 click==7.1.2
 distlib==0.3.0
+dnspython==1.16.0
 filelock==3.0.12
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-WTF==0.14.3
+is-disposable-email==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
@@ -17,3 +19,4 @@ six==1.15.0
 virtualenv==20.0.25
 Werkzeug==1.0.1
 WTForms==2.3.1
+wtforms-validators==1.0.0
